[package]
name = "toxoid"
version = "0.1.0"
# existing package info here
build = "build.rs"

[workspace]
members = [
    	# Crates
		"crates/toxoid_sdl",
		"crates/toxoid_ffi_macro",
		
		# Examples
		"examples/snake/snake",
		"examples/snake/snake_runner",
		"examples/snake/snake_engine",
]

# Workspace ignore
exclude = [
	"crates/toxoid_render"
]

resolver = "2"

[profile.dev]
opt-level = 3

[[bin]]
name = "snake"
path = "examples/snake/runner/src/main.rs"