[package]
name = "host"
version = "0.1.0"
edition = "2021"

[dependencies]
toxoid_bootstrap = { path = "../../crates/toxoid_bootstrap" }
guest = { path = "../guest", optional = true }

# if emscripten target
# [target.'cfg(target_os = "emscripten")'.dependencies]
toxoid_ffi = { path = "../../crates/toxoid_ffi" }

[features]
# default = ["wasm-linking"]
default = ["static-linking"]
wasm-linking = ["toxoid_bootstrap/wasm-linking"]
static-linking = ["toxoid_bootstrap/static-linking", "guest"]
