[package]
name = "toxoid_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toxoid_api_macro = { path = "../toxoid_api_macro" }
serde = { version = "1.0", features = ["derive"] }
flexbuffers = "2.0.0"

[features]
default = ["net"]
client = []
server = []
net = []
host = []
guest = []