[package]
name = "toxoid_api"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20.2"
toxoid_api_macro = { path = "../toxoid_api_macro" }

# WASM32 dependencies
[target.'cfg(all(target_arch = "wasm32", not(target_os = "emscripten")))'.dependencies]
toxoid_guest = { path = "../toxoid_guest" }

# Native dependencies
[target.'cfg(any(not(target_arch = "wasm32"), target_os = "emscripten"))'.dependencies]
toxoid_host = { path = "../toxoid_host" }