[package]
name = "toxoid_bootstrap"
version = "0.1.0"
edition = "2021"

[dependencies]
toxoid_api = { path = "../toxoid_api" }
toxoid_host = { path = "../toxoid_host" }
toxoid_sokol = { path = "../toxoid_sokol" }
toxoid_render = { path = "../toxoid_render" }
toxoid_tiled = { path = "../toxoid_tiled" }
rand = "0.8.5"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
toxoid_runtime = { path = "../toxoid_runtime" }

[features]
default = [
    # "runtime",
    # "sokol",
    # "render",
    # "fetch",
    # "imgui"
]
static-linking = []
wasm-linking = []
# runtime = []
# sokol = []
# render = []
# fetch = []
# imgui = []