[package]
name = "toxoid_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toxoid_ffi = { path="../toxoid_ffi" }
toxoid_api = { path="../toxoid_api" }
# toxoid_api_macro = { path="../toxoid_api_macro" }
toxoid_render = { path="../toxoid_render" }
toxoid_sokol = { path="../toxoid_sokol" }
rand = "0.8.5"