[package]
name = "toxoid_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toxoid_api_macro = { path = "../toxoid_api_macro" }
toxoid_ffi = { path="../toxoid_ffi" }
toxoid_api = { path="../toxoid_api" }
# toxoid_api_macro = { path="../toxoid_api_macro" }
toxoid_render = { path="../toxoid_render" }
toxoid_sokol = { path="../toxoid_sokol", default-features = false, optional = true }
toxoid_serialize = { path="../toxoid_serialize" }
toxoid_tiled = { path="../toxoid_tiled" }
toxoid_net = { path="../toxoid_net", optional = true }
rand = "0.8.5"
once_cell = "1.19.0"

[features]
default = ["render", "fetch", "audio", "imgui", "spine", "stb", "net"]
client = []
server = []
render = ["toxoid_sokol/render"]
fetch = ["toxoid_sokol/fetch"]
audio = ["toxoid_sokol/audio"]
imgui = ["toxoid_sokol/imgui"]
spine = ["toxoid_sokol/spine"]
stb = ["toxoid_sokol/stb"]
net = ["toxoid_net"]
multithread = ["toxoid_ffi/multithread"]