[package]
name = "toxoid_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flecs_core = { path="../../libs/flecs-polyglot/rust/flecs_core" }
once_cell = "1.19.0"
toxoid_api = { path="../toxoid_api" }
toxoid_serialize = { path="../toxoid_serialize" }
flexbuffers = "2.0.0"

[features]
default = []
multithread = ["flecs_core/multithread"]