[package]
name = "toxoid_ffi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flecs_core = { path="../../libs/flecs-polyglot/rust/flecs_core" }
once_cell = "1.19.0"
toxoid_api = { path="../toxoid_api" }
toxoid_serialize = { path="../toxoid_serialize" }
toxoid_json = { path="../toxoid_json" }
flexbuffers = "2.0.0"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
default = []
multithread = ["flecs_core/multithread"]