[package]
name = "toxoid_guest"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.20.2"
wit-bindgen-rt = { version = "0.32.0", features = ["bitflags"] }

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:toxoid-component"

[package.metadata.component.dependencies]
