[package]
name = "toxoid_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
flexbuffers = "2.0.0"
once_cell = "1.19.0"
toxoid_ffi = { path="../toxoid_ffi" }
toxoid_api = { path="../toxoid_api" }