[package]
name = "toxoid_runtime"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
once_cell = "1.19.0"
wasmtime = "26.0.0"
wasmtime-wasi = "26.0.0"
toxoid_host = { path = "../toxoid_host" }
toxoid_api = { path = "../toxoid_api" }

[features]
default = []
wasm = []
