[package]
name = "toxoid_sokol"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
#sokol = { git="https://github.com/floooh/sokol-rust.git" }
sokol = { rev="c9e9a83", git="https://github.com/troyedwardsjr/sokol-rust" }
toxoid_render = { version="*", path="../toxoid_render" }
toxoid_api = { version="*", path="../toxoid_api" }
once_cell = "1.19.0"

[build-dependencies]
bindgen = "0.69.1"
cc = "1.0.83"

[features]
default = ["render", "fetch", "audio", "imgui", "spine", "stb"]
render = []
spine = []
imgui = []
fetch = []
audio = []
stb = []