[package]
name = "toxoid_sokol"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
once_cell = "1.20.2"
sokol = { git="https://github.com/floooh/sokol-rust" }
toxoid_api = { path = "../toxoid_api" }
toxoid_render = { path = "../toxoid_render" }

[target.'cfg(target_os = "macos")'.build-dependencies]
cc = "1.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

[build-dependencies]
bindgen = "0.71.1"
cc = "1.0"

[features]
default = [
    "render", 
    "fetch", 
    "audio", 
    "stb",
    # "imgui"
    # "spine"
]
render = []
# spine = []
# imgui = []
fetch = []
audio = []
stb = []
