[package]
name = "snake_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
flecs_core = { path="../../../libs/flecs-polyglot/rust/flecs_core" }
toxoid_sdl = { path="../../../crates/toxoid_sdl" }
toxoid_ffi = { path="../../../crates/toxoid_ffi" }
toxoid_ffi_macro = { path="../../../crates/toxoid_ffi_macro" }