[package]
name = "snake_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toxoid_ffi = { path="../../../crates/toxoid_ffi" }
toxoid_api = { path="../../../crates/toxoid_api" }
toxoid_api_macro = { path="../../../crates/toxoid_api_macro" }