[package]
name = "snake_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toxoid_engine = { path="../../../crates/toxoid_engine", features = ["render", "fetch", "audio", "imgui", "spine", "stb", "net", "client"] }